--- a/package.json
+++ b/package.json
@@ -1,17 +1,42 @@
 {
-  "name": "text-api",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Institute Management System",
+  "main": "server",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "keywords": [
+    "erp"
+  ],
+  "author": "return-zero",
   "license": "ISC",
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
+  },
   "dependencies": {
-    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cloudinary": "^1.37.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-cron": "^3.0.2"
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.1",
+    "react-truncate": "^2.4.0",
+    "truncate-html": "^1.0.4",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
+  },
+  "engines": {
+    "node": "v18.12.1"
   }
 }
