--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "version": 2,
-    "builds": [
+    "version":2,
+    "builds":[
         {
-            "src": "index.js",
-            "use": "@now/node"
+            "src":"./server.js",
+            "use":"@vercel/node"
         }
     ],
-    "routes": [
+    "routes":[
         {
-            "src": "/(.*)",
-            "dest": "index.js"
+            "src":"/(.*)",
+            "dest":"/"
         }
     ]
 }
